Changelog for welcome

2020-Apr-13:
- added option --changelog
