@@ -760,6 +760,8 @@ GeneralInfo() {
 AfterInstall() {
   local handle="$1"
   local tabnum="$2"
+  local _exclamation='&#33;'   # '!'
+
   local tabcontents=(
       eos_yad
       --plug="$handle" --tabnum="$tabnum" --form --columns=2
@@ -772,7 +774,7 @@ AfterInstall() {
       --field=" $(ltr after_install_cdm)!preferences-desktop-display!$(ltr after_install_cdmtip)":fbtn  'bash -c yad_ChangeDisplayManager'
       --field=" $(ltr after_install_ew)!preferences-desktop-wallpaper!$(ltr after_install_ewtip)":fbtn  'eos-set-background-picture'
       --field=" Xfce vanilla theme!preferences-desktop-theme!Use vanilla Xfce theme":fbtn               'bash -c yad_vanilla_xfce4_theme'
-      --field=" Xfce EndeavourOS default theme!preferences-desktop-theme!Use EndeavourOS default Xfce theme":fbtn               'bash -c yad_endeavouros_xfce4_theme'
+      --field=" Xfce EndeavourOS default theme (experimental$_exclamation)!preferences-desktop-theme!Use EndeavourOS default Xfce theme":fbtn               'bash -c yad_endeavouros_xfce4_theme'
       --field="$(ltr after_install_pm)!!$(ltr after_install_pmtip)":fbtn           "$_BROWSER https://endeavouros.com/docs/pacman/package-management-in-endeavouros"
       --field="$(ltr after_install_ay)!!$(ltr after_install_aytip)":fbtn           "$_BROWSER https://endeavouros.com/docs/aur/yay"
       --field="$(ltr after_install_hn)!!$(ltr after_install_hntip)":fbtn           "$_BROWSER https://endeavouros.com/docs/hardware-and-network"
@@ -862,6 +864,12 @@ WelcomeHelp() {
 }
 export -f WelcomeHelp
 
+WelcomeChangelog() {
+    SetBrowser
+    $_BROWSER https://raw.githubusercontent.com/endeavouros-team/PKGBUILDS/master/welcome/changelog.txt
+}
+export -f WelcomeChangelog
+
 SetBrowser() {
     local xx
     for xx in xdg-open exo-open firefox chromium ; do  # use one of these browser commands
@@ -872,6 +880,7 @@ SetBrowser() {
     done
     DIE "$FUNCNAME: cannot find a browser"
 }
+export -f SetBrowser
 
 PrepareTabs() {
     local handle="$1"
@@ -1203,13 +1212,15 @@ StartHere() {
 
     IsInstalling || notebook+=(--active-tab=2)
 
+    notebook+=(--button=" Welcome's changelog!meld!Show the changelog of Welcome":"bash -c WelcomeChangelog")
     notebook+=(--button=" $(ltr butt_help)!help-contents!":"bash -c WelcomeHelp")
-
     if [ $is_installing -ne 0 ] ; then
         notebook+=(--button=" $(ltr butt_noshow)!face-crying!$(ltr butt_noshow)":5)
     fi
     notebook+=(--button=" $(ltr butt_later)!face-cool!$(ltr butt_latertip)":0)
+
     "${notebook[@]}"
+
     local result=$?
     case "$result" in
         5) WelcomeSettings disable ;;
