@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=Welcome
 Comment=EndeavourOS Welcome launcher
 Comment[sk]=Spúšťač privítania v systéme EndeavourOS
-Exec=sh /usr/share/endeavouros/scripts/welcome --startdelay=3
+Exec=sh /usr/share/endeavouros/scripts/welcome --startdelay=3 --enable
 Icon=/usr/share/endeavouros/EndeavourOS-icon.png
 # StartupNotify=false
 # Terminal=False
