@@ -1,5 +1,11 @@
 Changelog for welcome
 
+2020-Apr-16:
+- added button to install the EndeavourOS Xfce theming (experimental!)
+- welcome launcher icon starts welcome even it was disabled (and re-enables it)
+- new translation: Portuguese
+- updated Slovakian translation
+- added button "Welcome's changelog"
+
 2020-Apr-13:
 - added option --changelog
-
